express/blocks/template-x/template-x.css
/* ... */
main .template-x-horizontal-fullwidth-collaboration-container .default-content-wrapper p {
    font-size: 16px;
    line-height: 24px;
}

main .template-x-inner-wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 20px auto 0 auto;
    font-size: var(--body-font-size-m);
    font-weight: var(--body-font-weight);
    text-align: left;
}

main .template-x.sixcols .template-x-inner-wrapper,
main .template-x.fullwidth .template-x-inner-wrapper {
    flex-direction: row;
    justify-content: center;
}

main .template-x.horizontal .template-x-inner-wrapper {
    margin-top: 0;
}

main .template-x.fullwidth.holiday .template-x-inner-wrapper {
    max-height: 0;
    position: relative;
    transition: max-height 0.5s, padding-top 0.5s;
    overflow: hidden;
}

main .template-x.fullwidth.holiday .expanded.template-x-inner-wrapper {
    max-height: 300px;
}

main .template-x.fullwidth.holiday .animation-background {
    position: absolute;
    top: 0;
    left: 0;
    object-fit: cover;
    height: 100%;
    width: 100vw;
    z-index: 0;
    pointer-events: none;
    opacity: 0;
    transition: opacity 0.2s;
}

main .template-x.fullwidth.holiday.expanded .animation-background {
    opacity: 1;
    transition: opacity 1s;
}

main .template-x.fullwidth.sm-view .template-x-inner-wrapper,
main .template-x.fullwidth.md-view .template-x-inner-wrapper,
main .template-x.fullwidth.lg-view .template-x-inner-wrapper {
    padding: 0 28px;
}

main .template-x.with-categories-list .template-x.fullwidth {
    width: 100%;
}

@media (min-width: 600px) {
    main .template-x.with-categories-list .template-x.fullwidth {
        width: calc(100% - 172px);
    }

    main .template-x.with-categories-list .template-x.fullwidth.sm-view {
        max-width: calc(100% - 172px);
    }

    main .template-x.with-categories-list .template-x.fullwidth.md-view {
        max-width: calc(100% - 260px);
    }

    main .template-x.with-categories-list .template-x.fullwidth.lg-view {
        max-width: calc(100% - 337px);
    }
}

main .template-x.sixcols > .template-x-inner-wrapper > .masonry-col,
main .template-x.fullwidth > .template-x-inner-wrapper > .masonry-col {
    max-width: 175px;
}

main .template-x.fullwidth.sm-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 165px;
    text-align: center;
}

main .template-x.fullwidth.md-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 258.5px;
    text-align: center;
}

main .template-x.fullwidth.lg-view > .template-x-inner-wrapper > .masonry-col {
    max-width: 352px;
    text-align: center;
}

main .template-x-wrapper .template-title {
    margin: 0 12px 20px 12px;
}

main .template-x.horizontal .template-title {
    margin-bottom: 0;
}

main .template-x-container .template-x-wrapper:not(:has(.toolbar-wrapper)) {
    padding-top: 60px;
}

main .template-x-container:not(.horizontal) .template-title h2 {
    padding-top: 80px;
}

main .template-x-wrapper .template-title.with-link > div {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: flex-start;
}

main .template-x-wrapper .template-title.horizontal > div > * {
    text-align: left;
    margin: 0;
}

main .template-x-wrapper .template-title.horizontal.holiday .template-title,picture,a,h4,p {
    z-index: 1;
}

main .template-x-wrapper .template-title.horizontal p {
    margin-top: 8px;
    width: fit-content;
    font-size: var(--body-font-size-m);
}

main .template-x-wrapper .template-link,
main .template-x-wrapper .template-title-link {
    text-decoration: none;
    padding-left: 16px;
    padding-top: 6px;
    display: flex;
}

main .template-x-wrapper .toggle-button {
    display: flex;
}

main .template-x-wrapper:not(.holiday) .template-link::after,
main .template-x-wrapper:not(.holiday) .template-title-link::after,
main .holiday.template-x-wrapper .toggle-button-chev {
    display: flex;
    width: 6px;
    height: 6px;
    border-top-width: 0;
    border-left-width: 0;
    border-bottom-width: 2px;
    border-right-width: 2px;
    border-style: solid;
    border-color: var(--color-info-accent);
    transform-origin: 75% 75%;
    transform: rotate( 45deg );
    content: "";
    margin-top: 5px;
    margin-left: 5px;
    margin-right: 2.25px;
    transition: transform 0.2s;
}

main .holiday.template-x-wrapper .expanded.toggle-button .toggle-button-chev {
    transform: rotate(225deg);
}

main .template-x-wrapper .template-title-link {
    padding: 0;
    white-space: nowrap;
}

main .template-x-wrapper:not(.holiday) .template-title-link::after {
    margin-top: 7px;
}

main .template-x .template p {
    margin: 0;
}

main .template-x .template {
    display: flex;
    flex-direction: column;
    width: 240px;
    margin: 0 0 32px 0;
    justify-content: flex-end;
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid;
    text-decoration: unset;
    position: relative;
    border-radius: 7px;
}

main .template-x .template:focus {
    outline: none;
    box-shadow: 0 0 0 2px var(--color-white), 0 0 0 4px var(--color-info-accent);
}


main .template-x .template > div:first-child > a:any-link {
    padding-left: 0;
}

main .template-x .template img, main .template-x .template video {
    border-radius: 12px;
}

main .template-x .template img:not(.icon),
main .template-x .template video {
    width: 100%;
    height: 100%;
    pointer-events: none;
    object-fit: cover;
    display: block;
}

main .template-x .template .media-wrapper img.hidden,
main .template-x .template .media-wrapper video.hidden {
    opacity: 0;
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    z-index: -1;
}

main .template-x .template .media-wrapper video {
    clip-path: inset(0 0 3px 0);
}

main .template-x.large .template {
    width: 100%;
    margin: 0;
    border: 0;
}

main .template-x.large .template > div {
    margin: 0;
}
/* ... */

